--- a/src/sidebars/sidebars.css
+++ b/src/sidebars/sidebars.css
@@ -15,7 +15,7 @@
     text-align: left;
 }
 
-.newsSidebar {
+.noticeSidebar {
     background-color: white;
     color: black;
     border-radius: 15px;
