--- a/src/users/controlpanel/controlpanel.css
+++ b/src/users/controlpanel/controlpanel.css
@@ -1,24 +1,12 @@
-.signUpCard {
+.controlPanelCard {
     background-color: white;
     color: black;
     /*max-width: 18rem;*/
     /* find a way to prevent NavigationBar overlap on its below items */
     width: 100%;
     border-radius: 15px;
-    padding: 2%;
     text-align: center;
     margin: auto;
-    margin-top: 3%;
+    margin-top: 1%;
 }
 
-.signUpTextBox {
-    background-color: white;
-    color: black;
-    font-size: 16px;
-    text-align: left;
-    margin-top: 2%;
-}
-
-:invalid {
-    border-color: red !important;
-}
