pya-py TicTacToe 3D Online Preview

--- a/src/games/games.css
+++ b/src/games/games.css
@@ -1,5 +1,5 @@
 .gameTableCells {
-    width: 40px;
+    width: 50px;
     height: 40px;
     transform: skew(45deg);
     text-align: center;
@@ -8,14 +8,9 @@
 }
 
 .gameBorderCard {
-    background-color: white;
-    color: black;
+    width: 100%;
     margin: auto;
-    margin-top: 1%;
-    width: 500px;
-    border-radius: 15px;
-    padding-top: 2%;
-    padding-left: 70px;
+    padding-left: 10%;
 }
 
 .tableWholeBlock {
