--- a/src/sidebars/sidebars.css
+++ b/src/sidebars/sidebars.css
@@ -12,7 +12,7 @@
     background-color: white;
     color: black;
     font-size: 16px;
-    text-align: left;
+    text-align: center;
 }
 
 .noticeSidebar {
