--- a/src/profile/profile.css
+++ b/src/profile/profile.css
@@ -18,7 +18,7 @@
 .noticeManagerCard {
     width: 100%;
     border-radius: 10px;
-    margin-top: 2%;
+    margin-top: 1%;
     height: 90vh;
 }
 
@@ -29,9 +29,9 @@
     color: orange;
 }
 
-.userInfoCard {
+.bigSingleCard {
     width: 100%;
-    border-radius: 10px;
+    border-radius: 5px;
     margin-top: 1%;
 }
 
