--- a/src/informations/info.css
+++ b/src/informations/info.css
@@ -1,10 +1,10 @@
-.singleCard {
+.simple-single-card {
     background-color: white;
     color: black;
     /*max-width: 18rem;*/
     margin: auto; 
     margin-top: 2%;
-    
+    margin-bottom: 3%;
     border-radius: 10px;
     width: 100%;
 }
