--- a/src/sidebars/sidebars.css
+++ b/src/sidebars/sidebars.css
@@ -1,4 +1,4 @@
-.signInSidebar {
+.sign-in-sidebar {
     background-color: white;
     color: black;
     border-radius: 10px;
@@ -7,7 +7,7 @@
     width: 100%;
 }
 
-.signInSidebarTextBox {
+.sign-in-sidebar-textBox {
     width: 100%;
     background-color: white;
     color: black;
@@ -15,7 +15,7 @@
     text-align: center;
 }
 
-.noticeSidebar {
+.notice-sidebar {
     background-color: white;
     color: black;
     border-radius: 10px;
@@ -24,19 +24,13 @@
     width: 100%;
 }
 
-#btnSideBarSignIn {
+.sign-in-sidebar-buttons {
     font-size: 16px;
     width: 100%;
     margin: 1%;
 }
 
-#btnSideBarPasswordRecovery {
-    font-size: 16px;
-    width: 100%;
-    margin: 1%;
-}
-
-.playerInfoSideBar {
+.player-info-sideBar {
     background-color: white;
     color: black;
     border-radius: 10px;
@@ -45,7 +39,7 @@
     width: 100%;
 }
 
-.playerAvatar {
+.player-avatar {
     width: 35%;
     height: 35%;
     border-radius: 50%;
@@ -54,6 +48,6 @@
     margin-top:1%
 }
 
-.badgeFontSize {
+.player-badge-font-size {
     font-size: 16px;
 }
