--- a/src/users/users.css
+++ b/src/users/users.css
@@ -1,22 +1,22 @@
-.signUpCard {
+.sign-up-card {
     background-color: white;
     color: black;
-    /*max-width: 18rem;*/
-    /* find a way to prevent NavigationBar overlap on its below items */
     width: 100%;
     border-radius: 10px;
     padding: 2%;
     text-align: center;
     margin: auto;
     margin-top: 3%;
+    margin-bottom: 3%;
 }
 
-.signUpTextBox {
+.sign-up-textbox {
     background-color: white;
     color: black;
     font-size: 16px;
     text-align: left;
     margin-top: 2%;
+    
 }
 
 :invalid {
