--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@
 }
 *{
     box-sizing: border-box;
+    width:'100%';
+    word-wrap: 'break-word';
+    word-break: 'break-all';
 }
 body {
     width: auto;
