--- a/src/profile/profile.css
+++ b/src/profile/profile.css
@@ -68,3 +68,14 @@
     height: 750px;
     overflow-y: scroll;
 }
+
+.icon-unfriend {
+    cursor: pointer;
+    font-size: 20px;
+    color: black; 
+    /* how to hide? */
+    /* color: white; */
+}
+.icon-unfriend:hover {
+    color: red;
+}
