optimized . scoreboard bug fixed. gameplay bugs fixed.

--- a/src/sidebars/sidebars.css
+++ b/src/sidebars/sidebars.css
@@ -30,7 +30,7 @@
     margin: 1%;
 }
 
-.player-info-sideBar {
+.player-info-sidebar {
     background-color: white;
     color: black;
     border-radius: 10px;
