--- a/src/profile/profile.css
+++ b/src/profile/profile.css
@@ -65,7 +65,7 @@
 
 .tabs-list-friends-in-games-scrollable {
 /* .nav nav-items{ */
-    height: 750px;
+    height: 250px;
     overflow-y: scroll;
 }
 
@@ -78,4 +78,9 @@
 }
 .icon-unfriend:hover {
     color: red;
+}
+
+.friend-games-box-scrollable {
+    height: 500px;
+    overflow-y: scroll;
 }
