--- a/src/games/games.css
+++ b/src/games/games.css
@@ -8,10 +8,14 @@
     border: 2px solid black;
 }
 
+.game-table-cells:focus{
+    background-color: orange;
+}
 .game-border-card {
     width: 100%;
     margin: auto;
     padding-left: 10%;
+    
 }
 
 .game-deck-card {
@@ -22,4 +26,9 @@
     margin-top: 2%;
     border-radius: 5px;
     width: 100%;
+}
+
+.animate-new-move{
+    -webkit-transition: opacity 0.7s ease-out;
+    transition: opacity 0.7s ease-out;
 }
