--- a/src/profile/edit/avatar.css
+++ b/src/profile/edit/avatar.css
@@ -20,8 +20,8 @@
 
 .file-picker-label{
     border-radius: 10px;
-    width: 100%;
-    margin: 3%;
+    max-width: 95%;
+    margin-top: 3%;
     padding: 2%;
     text-align: center;
     cursor: pointer;
