--- a/src/tables/scores/scores.css
+++ b/src/tables/scores/scores.css
@@ -1,4 +1,7 @@
-
+.scores-mode-select-layout{
+    margin: auto;
+    width:100%;
+}
 .scores-mode-select-button{
     font-size: 20px;
     border-radius: 10px;
@@ -19,8 +22,6 @@
     word-wrap: break-word;
 }
 .single-score-card{
-    width: 100%;
-    
     color: black;
     margin-top: 1%;
     margin-bottom: 1%;
@@ -28,4 +29,12 @@
     background-color: transparent;
     font-size: 18px;
     /* opacity: 0.7; */
+    margin-left:auto;
+    margin-right: auto;
+    width: 97%;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+.single-score-card:hover{
+    width: 100%;
 }
