--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,39 @@ body {
     font-family: 'Vazir-Bold' !important;
     font-size: 16px !important;
 }
+
+.animated-textbox{
+    margin-left:auto;
+    margin-right: auto;
+    width: 50%;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+.animated-textbox:focus{
+    width: 100%;
+}
+
+.animated-button{
+    margin-left:auto;
+    margin-right: auto;
+    width: 70%;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+.animated-button:hover{
+    width: 100%;
+}
+
+.animated-navitem{
+    margin-left:auto;
+    margin-right: auto;
+    width: 90%;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+.animated-navitem:hover{
+    width: 100%;
+}
+.animated-navitem:focus{
+    width: 100%;
+}
