--- a/src/sidebars/sidebars.css
+++ b/src/sidebars/sidebars.css
@@ -15,13 +15,20 @@
 }
 
 .animated-sidebar{
-    margin-left:auto;
-    margin-right: auto;
     opacity: 0.85;
     -webkit-transition: opacity 0.25s ease-in-out;
     transition: opacity 0.25s ease-in-out;
 }
 .animated-sidebar:hover{
+    opacity: 1.0;
+}
+
+.animated-sidebar-intense{
+    opacity: 0.7;
+    -webkit-transition: opacity 0.25s ease-in-out;
+    transition: opacity 0.25s ease-in-out;
+}
+.animated-sidebar-intense:hover{
     opacity: 1.0;
 }
 
