--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 .animated-textbox{
     margin-left:auto;
     margin-right: auto;
-    width: 50%;
+    width: 60%;
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
 }
@@ -57,4 +57,17 @@ body {
 }
 .animated-navitem:focus{
     width: 100%;
+}
+
+.animated-form{
+    opacity: 0.85;
+    -webkit-transition: opacity 0.25s ease-in-out;
+    transition: opacity 0.25s ease-in-out;
+}
+.animated-form:hover{
+    opacity: 1.0;
+}
+
+:invalid {
+    border-color: red !important;
 }
