empty cell select effect

--- a/src/games/games.css
+++ b/src/games/games.css
@@ -5,6 +5,11 @@
     border: 2px solid black;
 }
 
+.game-table-cells:focus {
+    background-color: orange;
+}
+
+
 /* .player-x-cell {
 
     border: 2px solid dodgerblue;
@@ -14,17 +19,18 @@
     border: 2px solid darkred;
 } */
 
-.player-x-cell:focus{
-    background-color:dodgerblue
+.player-x-cell:focus {
+    background-color: dodgerblue;
 }
-.player-o-cell:focus{
-    background-color:#ff0000;
+
+.player-o-cell:focus {
+    background-color: #ff0000;
 }
+
 .game-border-card {
     width: 100%;
     margin: auto;
     padding-left: 10%;
-    
 }
 
 .game-deck-card {
@@ -37,7 +43,7 @@
     width: 100%;
 }
 
-.animate-new-move{
+.animate-new-move {
     -webkit-transition: opacity 0.7s ease-out;
     transition: opacity 0.7s ease-out;
 }
